fixes swagger docs
